--- a/java/pit-reports_before/money_problem.domain/MoneyCalculator.java.html
+++ b/java/pit-reports_before/money_problem.domain/MoneyCalculator.java.html
@@ -15,12 +15,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_1'></a>
 <span>
 </span>
 </span>
@@ -30,12 +30,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_2'></a>
 <span>
 </span>
 </span>
@@ -45,12 +45,12 @@
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_3'></a>
 <span>
 </span>
 </span>
@@ -60,12 +60,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_4'></a>
 <span>
 </span>
 </span>
@@ -75,32 +75,32 @@
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_5'/>
 5
 </td>
-<td class='killed'>
+<td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_5'>2</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_5'>2</a>
 <span>
 
-1. add : replaced double return with 0.0d for money_problem/domain/MoneyCalculator::add &rarr; KILLED<br/>
+1. add : replaced double return with 0.0d for money_problem/domain/MoneyCalculator::add &rarr; SURVIVED<br/>
 
-2. add : Replaced double addition with subtraction &rarr; KILLED<br/>
+2. add : Replaced double addition with subtraction &rarr; SURVIVED<br/>
 
 </span>
 </span>
 </td>
-<td class='covered'><pre><span  class='killed'>        return amount + amount2;</span></pre></td></tr>
+<td class='covered'><pre><span  class='survived'>        return amount + amount2;</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_6'></a>
 <span>
 </span>
 </span>
@@ -110,12 +110,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_7'></a>
 <span>
 </span>
 </span>
@@ -125,12 +125,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_8'></a>
 <span>
 </span>
 </span>
@@ -140,12 +140,12 @@
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_9'/>
 9
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_9'>2</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_9'>2</a>
 <span>
 
 1. times : Replaced double multiplication with division &rarr; KILLED<br/>
@@ -160,12 +160,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_10'></a>
 <span>
 </span>
 </span>
@@ -175,12 +175,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_11'></a>
 <span>
 </span>
 </span>
@@ -190,12 +190,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_12'></a>
 <span>
 </span>
 </span>
@@ -205,12 +205,12 @@
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_13'/>
 13
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_13'>2</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_13'>2</a>
 <span>
 
 1. divide : Replaced double division with multiplication &rarr; KILLED<br/>
@@ -225,12 +225,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_14'></a>
 <span>
 </span>
 </span>
@@ -240,12 +240,12 @@
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5ec3689b_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5d96d434_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_15'></a>
 <span>
 </span>
 </span>
@@ -258,24 +258,34 @@
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5ec3689b_5'>5</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5d96d434_5'>5</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_5'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_5'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>add<br/><b>Killed by : </b>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldAddInUsd()]</span></span> replaced double return with 0.0d for money_problem/domain/MoneyCalculator::add &rarr; KILLED</span>
-</div> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>add<br/><b>Killed by : </b>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldAddInUsd()]</span></span> Replaced double addition with subtraction &rarr; KILLED</span>
-</div> 
+<p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>add<br/><b>Killed by : </b>none</span></span> replaced double return with 0.0d for money_problem/domain/MoneyCalculator::add &rarr; SURVIVED</span>
+<a title="Click to view covering tests" class="view-covered-by-tests" onClick="document.getElementById('MutationIdentifier-[location=Location-[clazz=money_problem.domain.MoneyCalculator,-method=add,-methodDesc=(DLmoney_problem/domain/Currency;D)D],-indexes=[6],-mutator=org.pitest.mutationtest.engine.gregor.mutators.returns.PrimitiveReturnsMutator]').style.display=(document.getElementById('MutationIdentifier-[location=Location-[clazz=money_problem.domain.MoneyCalculator,-method=add,-methodDesc=(DLmoney_problem/domain/Currency;D)D],-indexes=[6],-mutator=org.pitest.mutationtest.engine.gregor.mutators.returns.PrimitiveReturnsMutator]').style.display == 'block')?'none':'block';">Covering tests</a>
+<div class="covered-tests" id="MutationIdentifier-[location=Location-[clazz=money_problem.domain.MoneyCalculator,-method=add,-methodDesc=(DLmoney_problem/domain/Currency;D)D],-indexes=[6],-mutator=org.pitest.mutationtest.engine.gregor.mutators.returns.PrimitiveReturnsMutator]" style="display:none;">Covered by tests:
+<ul>
+<li>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldAddInUsd()]</li> 
+</ul>
+</div></div> <p class='SURVIVED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>add<br/><b>Killed by : </b>none</span></span> Replaced double addition with subtraction &rarr; SURVIVED</span>
+<a title="Click to view covering tests" class="view-covered-by-tests" onClick="document.getElementById('MutationIdentifier-[location=Location-[clazz=money_problem.domain.MoneyCalculator,-method=add,-methodDesc=(DLmoney_problem/domain/Currency;D)D],-indexes=[5],-mutator=org.pitest.mutationtest.engine.gregor.mutators.MathMutator]').style.display=(document.getElementById('MutationIdentifier-[location=Location-[clazz=money_problem.domain.MoneyCalculator,-method=add,-methodDesc=(DLmoney_problem/domain/Currency;D)D],-indexes=[5],-mutator=org.pitest.mutationtest.engine.gregor.mutators.MathMutator]').style.display == 'block')?'none':'block';">Covering tests</a>
+<div class="covered-tests" id="MutationIdentifier-[location=Location-[clazz=money_problem.domain.MoneyCalculator,-method=add,-methodDesc=(DLmoney_problem/domain/Currency;D)D],-indexes=[5],-mutator=org.pitest.mutationtest.engine.gregor.mutators.MathMutator]" style="display:none;">Covered by tests:
+<ul>
+<li>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldAddInUsd()]</li> 
+</ul>
+</div></div> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5ec3689b_9'>9</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5d96d434_9'>9</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_9'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_9'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>times<br/><b>Killed by : </b>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldMultiplyInEuros()]</span></span> Replaced double multiplication with division &rarr; KILLED</span>
 </div> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>times<br/><b>Killed by : </b>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldMultiplyInEuros()]</span></span> replaced double return with 0.0d for money_problem/domain/MoneyCalculator::times &rarr; KILLED</span>
@@ -284,11 +294,11 @@
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5ec3689b_13'>13</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5d96d434_13'>13</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5ec3689b_13'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5d96d434_13'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>divide<br/><b>Killed by : </b>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldDivideInKoreanWons()]</span></span> Replaced double division with multiplication &rarr; KILLED</span>
 </div> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>divide<br/><b>Killed by : </b>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldDivideInKoreanWons()]</span></span> replaced double return with 0.0d for money_problem/domain/MoneyCalculator::divide &rarr; KILLED</span>
@@ -328,7 +338,7 @@
 
 <h2>Tests examined</h2>
 <ul>
-<li>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldAddInUsd()] (0 ms)</li><li>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldDivideInKoreanWons()] (0 ms)</li><li>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldMultiplyInEuros()] (0 ms)</li>
+<li>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldAddInUsd()] (0 ms)</li><li>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldDivideInKoreanWons()] (0 ms)</li><li>money_problem.domain.MoneyCalculatorTest.[engine:junit-jupiter]/[class:money_problem.domain.MoneyCalculatorTest]/[method:shouldMultiplyInEuros()] (1 ms)</li>
 </ul>
 
 <br/>
